configs/linkerd-auth-policy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-checkout-to-payment
  namespace: boutique
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: paymentservice-server
  requiredAuthenticationRefs:
  - name: checkout-sa
    kind: MeshTLSAuthentication
    group: policy.linkerd.io
